# sindri-scroll-sdk

./: .gitignore  Cargo.toml  Makefile  README.md  compose.yaml  docker-compose.yml  example.config.json
.github/: pull_request_template.md
.github/workflows/: build-publish.yaml  ci.yaml  lint.yaml  publish-docker.yaml  publish-helm.yaml  pull_request_template.md
charts/scroll-proving-sindri/: Chart.yaml  README.md  values.yaml
charts/sindri-scroll/: Chart.yaml  values.yaml
charts/sindri-scroll/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
charts/sindri-scroll/templates/tests/: test-connection.yaml
demo/: README.md  deploy.sh  prover-chunk-demo.yaml
demo/manifests/: regcred-demo.yaml
demo/values/: prover-batch-demo.yaml  prover-bundle-demo.yaml  prover-chunk-demo.yaml
docker/: Dockerfile
src/: lib.rs  main.rs  middleware.rs  prover.rs  utils.rs
tests/: env_var_test.rs  init_config_test.rs  utils_test.rs
tests/test_data/: default_config.json
