[package]
name = "sindri-scroll-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.13.1"
chrono = "0.4.38"
clap = { version = "4.5", features = ["derive"] }
ctor = "0.2.8"
env_logger = "0.11.3"
eth-keystore = "0.5.0"
futures = "0.3.30"
hex = "0.4.3"
http = "1.1.0"
log = "0.4"
once_cell = "1.19.0"
rand = "0.8.5"
reqwest = { version = "0.12.4", features = ["gzip"] }
reqwest-middleware = "0.3"
reqwest-retry = "0.5"
rlp = "0.5.2"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
serde_stacker = "0.1"
sled = "0.34.7"
tiny-keccak = { version = "2.0.0", features = ["sha3", "keccak"] }
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

# Core Scroll dependencies
prover_darwin = { git = "https://github.com/scroll-tech/zkevm-circuits.git", tag = "v0.12.2", package = "prover", default-features = false, features = ["parallel_syn", "scroll"] }
prover_darwin_v2 = { git = "https://github.com/scroll-tech/zkevm-circuits.git", tag = "v0.13.1", package = "prover", default-features = false, features = ["parallel_syn", "scroll"] }
scroll-proving-sdk = { git = "https://github.com/scroll-tech/scroll-proving-sdk.git", rev = "18aeeda"}
envy = "0.4.2"

[patch.crates-io]
ethers-signers  = { git = "https://github.com/scroll-tech/ethers-rs.git", branch = "v2.0.7" }
halo2curves = { git = "https://github.com/scroll-tech/halo2curves", branch = "v0.1.0" }
[patch."https://github.com/privacy-scaling-explorations/halo2.git"]
halo2_proofs = { git = "https://github.com/scroll-tech/halo2.git", branch = "v1.1"  }
[patch."https://github.com/privacy-scaling-explorations/poseidon.git"]
poseidon = { git = "https://github.com/scroll-tech/poseidon.git", branch = "main" }
[patch."https://github.com/privacy-scaling-explorations/bls12_381"]
bls12_381 = { git = "https://github.com/scroll-tech/bls12_381", branch = "feat/impl_scalar_field" }
